Support configuring the protocol in APN settings.
Bug: 3333633
Change-Id: I0797cd97074fe1b8a1318168b86fe4627488215a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1397,6 +1397,8 @@
     <string name="apn_auth_type_pap_chap">PAP or CHAP</string>
     <!-- Edit access point labels: The type of APN -->
     <string name="apn_type">APN type</string>
+    <!-- Edit access point labels: The protocol of the APN, e.g., "IPv4", "IPv6", or "IPv4/IPv6". -->
+    <string name="apn_protocol">APN protocol</string>
     <!-- Edit access point screen menu option to delete this APN -->
     <string name="menu_delete">Delete APN</string>
     <!-- APNs screen menu option to create a brand spanking new APN -->
