Import revised translations.  DO NOT MERGE
Change-Id: I8e7d2652c85f2bd516881e11283af62ee760adb1

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -981,7 +981,7 @@
     <string name="tts_settings" msgid="8186971894801348327">"Impostazioni di sintesi vocale"</string>
     <string name="tts_settings_title" msgid="4182348653053000933">"Impostazioni di sintesi vocale"</string>
     <string name="use_default_tts_settings_title" msgid="1577063839539732930">"Usa sempre mie imp."</string>
-    <string name="use_default_tts_settings_summary" msgid="4253502106159206276">"Le impostazioni predefinite hanno priorità sul quelle delle applicazioni"</string>
+    <string name="use_default_tts_settings_summary" msgid="4253502106159206276">"Le impostazioni predefinite hanno priorità su quelle delle applicazioni"</string>
     <string name="tts_default_settings_section" msgid="5787915620218907443">"Impostazioni predefinite"</string>
     <string name="tts_default_synth_title" msgid="29467896463371992">"Motore predefinito"</string>
     <string name="tts_default_synth_summary" msgid="6482936537135251690">"Imposta il motore di sintesi vocale per l\'uso con testo parlato"</string>
@@ -1134,7 +1134,7 @@
     <string name="encrypted_fs_alert_dialog_title" msgid="583462447886934755">"Avviso file system crittografati."</string>
     <string name="emergency_tone_title" msgid="1055954530111587114">"Tono chiamate emergenza"</string>
     <string name="emergency_tone_summary" msgid="722259232924572153">"Imposta il comportamento in caso di chiamata di emergenza"</string>
-    <string name="privacy_settings" msgid="9206631214140954954">"Backup e ripristino"</string>
+    <string name="privacy_settings" msgid="9206631214140954954">"Privacy"</string>
     <string name="privacy_settings_title" msgid="1987089301293213705">"Impostazioni privacy"</string>
     <string name="backup_section_title" msgid="8856083167469467588">"Backup e ripristino"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Dati personali"</string>
