--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -19,8 +19,8 @@
     <string name="yes" msgid="4676390750360727396">"はい"</string>
     <string name="no" msgid="6731231425810196216">"いいえ"</string>
     <string name="device_info_default" msgid="7847265875578739287">"不明"</string>
-    <string name="turn_on_radio" msgid="8706561489788373676">"無線通信をオン"</string>
-    <string name="turn_off_radio" msgid="1820294552893884115">"無線通信をオフ"</string>
+    <string name="turn_on_radio" msgid="8706561489788373676">"無線通信をON"</string>
+    <string name="turn_off_radio" msgid="1820294552893884115">"無線通信をOFF"</string>
     <string name="radioInfo_menu_viewADN" msgid="8743377494429930831">"SIMのアドレス帳を表示"</string>
     <string name="radioInfo_menu_viewFDN" msgid="7934301566925610318">"発信番号制限を表示"</string>
     <string name="radioInfo_menu_viewSDN" msgid="7130280686244955669">"サービス電話番号を表示"</string>
@@ -28,7 +28,7 @@
     <string name="radioInfo_service_in" msgid="1915416319177520020">"使用中"</string>
     <string name="radioInfo_service_out" msgid="5238736759641916278">"休止中または使用不可"</string>
     <string name="radioInfo_service_emergency" msgid="2485604591272668370">"緊急通報のみ"</string>
-    <string name="radioInfo_service_off" msgid="1434084741785525415">"無線通信をオフ"</string>
+    <string name="radioInfo_service_off" msgid="1434084741785525415">"無線通信をOFF"</string>
     <string name="radioInfo_roaming_in" msgid="9045363884600341051">"ローミング"</string>
     <string name="radioInfo_roaming_not" msgid="2851853244069662307">"ローミングなし"</string>
     <string name="radioInfo_phone_idle" msgid="7489244938838742820">"アイドル"</string>
@@ -226,12 +226,12 @@
     <string name="roaming_turn_it_on_button" msgid="4387601818162120589">"ONにする"</string>
     <string name="roaming_warning" msgid="1269870211689178511">"ローミングにより高額な通信料が発生することがあります。データローミングを許可しますか？"</string>
     <string name="roaming_reenable_title" msgid="7626425894611573131">"注意"</string>
-    <string name="networks" msgid="6333316876545927039">"オペレーターの選択"</string>
-    <string name="sum_carrier_select" msgid="6648929373316748020">"ネットワークオペレーターを選択します"</string>
+    <string name="networks" msgid="6333316876545927039">"通信事業者の選択"</string>
+    <string name="sum_carrier_select" msgid="6648929373316748020">"通信事業者を選択する"</string>
     <string name="date_and_time_settings_title" msgid="3350640463596716780">"日付と時刻"</string>
     <string name="date_and_time_settings_summary" msgid="2435705040205950381">"日付、時刻、タイムゾーンの設定"</string>
     <string name="date_time_auto" msgid="3086083265745944725">"自動"</string>
-    <string name="date_time_auto_summaryOn" msgid="9034585614665299846">"ネットワーク自動設定"</string>
+    <string name="date_time_auto_summaryOn" msgid="9034585614665299846">"ネットワークから設定を取得する"</string>
     <string name="date_time_auto_summaryOff" msgid="3900356736797266448">"ネットワーク自動設定"</string>
     <string name="date_time_24hour" msgid="1193032284921000063">"24時間表示"</string>
     <string name="date_time_set_time" msgid="5716856602742530696">"時刻設定"</string>
@@ -328,8 +328,8 @@
     <string name="bluetooth_a2dp_profile_summary_use_for" msgid="4630849022250168427">"メディアの音声に使用"</string>
     <string name="bluetooth_headset_profile_summary_use_for" msgid="8705753622443862627">"携帯電話の音声に使用"</string>
     <string name="bluetooth_opp_profile_summary_use_for" msgid="1255674547144769756">"ファイル転送に使用"</string>
-    <string name="bluetooth_dock_settings" msgid="3218335822716052885">"ドックの設定"</string>
-    <string name="bluetooth_dock_settings_title" msgid="5543069893044375188">"音声にドックを使用"</string>
+    <string name="bluetooth_dock_settings" msgid="3218335822716052885">"ホルダーの設定"</string>
+    <string name="bluetooth_dock_settings_title" msgid="5543069893044375188">"音声をホルダーに出力"</string>
     <string name="bluetooth_dock_settings_headset" msgid="1001821426078644650">"スピーカーフォン"</string>
     <string name="bluetooth_dock_settings_a2dp" msgid="8791004998846630574">"音楽とメディア"</string>
     <string name="bluetooth_dock_settings_remember" msgid="5551459057010609115">"設定を保存"</string>
@@ -434,7 +434,7 @@
     <string name="media_volume_title" msgid="3576565767317118106">"メディア"</string>
     <string name="media_volume_summary" msgid="5363248930648849974">"音楽や動画の再生音量"</string>
     <string name="alarm_volume_title" msgid="2285597478377758706">"アラーム"</string>
-    <string name="dock_settings_summary" msgid="455802113668982481">"付属のドックの音声設定"</string>
+    <string name="dock_settings_summary" msgid="455802113668982481">"装着したホルダーの音声を設定する"</string>
     <string name="dtmf_tone_enable_title" msgid="1453831168789523185">"タッチ操作音"</string>
     <string name="dtmf_tone_enable_summary_on" msgid="3028201873989887327">"ダイヤルパッドの操作音をONにする"</string>
     <string name="dtmf_tone_enable_summary_off" msgid="7791065951268525678">"ダイヤルパッドの操作音をONにする"</string>
@@ -449,16 +449,16 @@
     <string name="haptic_feedback_enable_summary_off" msgid="7287885436963105314">"ソフトキー操作や特定のUI操作でのバイブレーションをONにする"</string>
     <string name="audio_record_proc_title" msgid="4271091199976457534">"ノイズキャンセル"</string>
     <string name="audio_record_proc_summary" msgid="8113628457499616498">"通話中や録音中に周囲のノイズを抑えます。"</string>
-    <string name="dock_settings" msgid="1820107306693002541">"ドック"</string>
-    <string name="dock_settings_title" msgid="9161438664257429372">"ドックの設定"</string>
+    <string name="dock_settings" msgid="1820107306693002541">"ホルダー"</string>
+    <string name="dock_settings_title" msgid="9161438664257429372">"ホルダーの設定"</string>
     <string name="dock_audio_settings_title" msgid="3324750259959570305">"音声"</string>
-    <string name="dock_audio_summary_desk" msgid="6487784412371139335">"付属のデスクトップホルダーの設定"</string>
-    <string name="dock_audio_summary_car" msgid="6740897586006248450">"付属のカーホルダーの設定"</string>
-    <string name="dock_audio_summary_none" msgid="289909253741048784">"電話が固定されていません"</string>
-    <string name="dock_audio_summary_unknown" msgid="4465059868974255693">"付属のドックの設定"</string>
-    <string name="dock_not_found_title" msgid="3290961741828952424">"ドックが見つかりません"</string>
-    <string name="dock_not_found_text" msgid="3035260358985111855">"ドックの音声を設定するには携帯電話をドックに固定する必要があります"</string>
-    <string name="dock_sounds_enable_title" msgid="3659084028644948905">"ホルダー装着時の音"</string>
+    <string name="dock_audio_summary_desk" msgid="6487784412371139335">"装着した卓上ホルダーを設定する"</string>
+    <string name="dock_audio_summary_car" msgid="6740897586006248450">"装着したカーホルダーを設定する"</string>
+    <string name="dock_audio_summary_none" msgid="289909253741048784">"端末が装着されていません"</string>
+    <string name="dock_audio_summary_unknown" msgid="4465059868974255693">"装着したホルダーを設定する"</string>
+    <string name="dock_not_found_title" msgid="3290961741828952424">"ホルダーが見つかりません"</string>
+    <string name="dock_not_found_text" msgid="3035260358985111855">"ホルダーの音声を設定するには携帯端末をホルダーに装着する必要があります"</string>
+    <string name="dock_sounds_enable_title" msgid="3659084028644948905">"ホルダー脱着時の音"</string>
     <string name="dock_sounds_enable_summary_on" msgid="8491180514199743771">"携帯のホルダー脱着時に音を鳴らす"</string>
     <string name="dock_sounds_enable_summary_off" msgid="3151046599205265919">"携帯のホルダー脱着時に音を鳴らさない"</string>
     <string name="sync_settings" msgid="9186125469300013491">"アカウントと同期"</string>
@@ -474,8 +474,8 @@
     <string name="accelerometer_summary_off" msgid="5485489363715740761">"画面の向きに合わせて縦横表示を切り替える"</string>
     <string name="brightness" msgid="2354961343555249270">"画面の明るさ"</string>
     <string name="brightness_summary" msgid="838917350127550703">"画面の明るさを調整する"</string>
-    <string name="screen_timeout" msgid="4882669461447531301">"バックライト消灯"</string>
-    <string name="screen_timeout_summary" msgid="2905757633140605334">"画面バックライトを自動消灯するまでの時間を設定する"</string>
+    <string name="screen_timeout" msgid="4882669461447531301">"画面消灯"</string>
+    <string name="screen_timeout_summary" msgid="2905757633140605334">"画面を自動消灯するまでの時間を設定する"</string>
     <string name="automatic_brightness" msgid="5014143533884135461">"明るさを自動調整"</string>
     <string name="sim_lock_settings" msgid="3392331196873564292">"SIMカードロック設定"</string>
     <string name="sim_lock_settings_category" msgid="5136244267576697004">"SIMカードロック設定"</string>
@@ -545,7 +545,7 @@
     <string name="sd_mount_summary" product="default" msgid="4936591681679097699">"SDカードをマウント"</string>
     <string name="sd_format" product="nosdcard" msgid="2148179271623099054">"USBストレージ内データを消去"</string>
     <string name="sd_format" product="default" msgid="2576054280507119870">"SDカード内データを消去"</string>
-    <string name="sd_format_summary" product="nosdcard" msgid="1504606546865152514">"内部USBストレージ内の全データ（音楽、写真など）を消去します。"</string>
+    <string name="sd_format_summary" product="nosdcard" msgid="1504606546865152514">"内部USBストレージ内の全データ（音楽、写真など）の消去"</string>
     <string name="sd_format_summary" product="default" msgid="915849621390821841">"SDカード内の全データ（音楽、写真など）の消去"</string>
     <string name="sd_unavailable" msgid="8580107589533213904">"使用不可"</string>
     <string name="read_only" msgid="6702420168629076340">" （読み取り専用）"</string>
@@ -597,12 +597,12 @@
     <string name="menu_restore" msgid="8260067415075573273">"初期設定にリセット"</string>
     <string name="restore_default_apn_completed" msgid="3990449939234957281">"APN設定をリセットしました"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"データの初期化"</string>
-    <string name="master_clear_summary" msgid="4986154238001088492">"携帯電話内のすべてのデータを消去"</string>
+    <string name="master_clear_summary" msgid="4986154238001088492">"携帯端末内のすべてのデータを消去する"</string>
     <string name="master_clear_desc" product="nosdcard" msgid="2163013814299528247">"この操作を行うと、携帯端末の"<b>"内部ストレージ"</b>"から次のデータがすべて消去されます:"\n\n<li>"Googleアカウント"</li>\n<li>"システムとアプリケーションのデータと設定"</li>\n<li>"ダウンロードされたアプリケーション"</li>\n\n"端末上のすべてのデータを削除するには、"<b>"USBストレージ"</b>"内のデータを消去する必要があります。"\n\n</string>
     <string name="master_clear_desc" product="default" msgid="1741944496458365969">"この操作を行うと、携帯端末の"<b>"内部ストレージ"</b>"から次のデータがすべて消去されます:"\n\n<li>"Googleアカウント"</li>\n<li>"システムとアプリケーションのデータと設定"</li>\n<li>"ダウンロードされたアプリケーション"</li>\n\n"音楽や写真などユーザーデータも削除するには、"<b>"SDカード"</b>"内のデータを消去する必要があります。"\n\n</string>
     <string name="erase_external_storage" product="nosdcard" msgid="969364037450286809">"USBストレージ内データの消去"</string>
     <string name="erase_external_storage" product="default" msgid="1397239046334307625">"SDカード内データを消去"</string>
-    <string name="erase_external_storage_description" product="nosdcard" msgid="1657838142707381027">"内部USBストレージ内の全データ（音楽、写真など）を消去します。"</string>
+    <string name="erase_external_storage_description" product="nosdcard" msgid="1657838142707381027">"内部USBストレージ内の全データ（音楽、写真など）を消去する"</string>
     <string name="erase_external_storage_description" product="default" msgid="8100175974635894073">"SDカード内の全データ（音楽、写真など）を消去します。"</string>
     <string name="master_clear_button_text" msgid="7550632653343157971">"携帯電話をリセット"</string>
     <string name="master_clear_final_desc" msgid="6917971132484622696">"個人情報とダウンロードしたアプリケーションをすべて削除しますか？この操作を元に戻すことはできません。"</string>
@@ -644,11 +644,11 @@
     <string name="network_settings_summary" msgid="5149750850846813553">"ローミング、ネットワーク、APNを設定する"</string>
     <string name="location_title" msgid="1029961368397484576">"現在地"</string>
     <string name="location_network_based" msgid="8815705866861993344">"無線ネットワークを使用"</string>
-    <string name="location_networks_disabled" msgid="2708968452901433980">"無線ネットワーク使用のアプリケーション（地図など）で位置を表示する"</string>
+    <string name="location_networks_disabled" msgid="2708968452901433980">"地図などのアプリケーションで無線ネットワークの位置情報を使用する"</string>
     <string name="location_neighborhood_level" msgid="4656658097932515921">"Wi-Fi/モバイルネットワークで位置を検出する"</string>
     <string name="location_gps" msgid="6296125378829097831">"GPS機能を使用"</string>
-    <string name="location_street_level" msgid="7456259025474443314">"高精度測位"</string>
-    <string name="location_gps_disabled" msgid="6632537158777308128">"高精度測位（電池消費増、電波が良好な場所で使用）"</string>
+    <string name="location_street_level" msgid="7456259025474443314">"高精度測位を実行する"</string>
+    <string name="location_gps_disabled" msgid="6632537158777308128">"高精度測位を実行する（電池消費量増、屋外で使用する）"</string>
     <string name="assisted_gps" msgid="4649317129586736885">"A-GPSを使用"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"サーバーでGPSを補助します（OFFにするとネットワーク使用率が減少します）"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"サーバーでGPSを補助します（OFFにするとGPS性能が向上します）"</string>
@@ -738,7 +738,7 @@
     <string name="auto_launch_disable_text" msgid="7800385822185540166">"設定されていません。"</string>
     <string name="clear_activities" msgid="7408923511535174430">"設定を消去"</string>
     <string name="unknown" msgid="1592123443519355854">"不明"</string>
-    <string name="sort_order_alpha" msgid="1410278099123670628">"名前順に表示する"</string>
+    <string name="sort_order_alpha" msgid="1410278099123670628">"名前順"</string>
     <string name="sort_order_size" msgid="7024513286636502362">"サイズ順"</string>
     <string name="show_running_services" msgid="5736278767975544570">"実行中のサービスを表示"</string>
     <string name="show_background_processes" msgid="2009840211972293429">"キャッシュしたプロセスを表示"</string>
@@ -803,10 +803,10 @@
     <string name="memory" msgid="6609961111091483458">"RAM"</string>
     <!-- no translation found for service_process_name (4098932168654826656) -->
     <skip />
-    <string name="running_processes_item_description_s_s" msgid="5790575965282023145">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>のサービス"</string>
-    <string name="running_processes_item_description_s_p" msgid="8019860457123222953">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>のサービス"</string>
-    <string name="running_processes_item_description_p_s" msgid="744424668287252915">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>のサービス"</string>
-    <string name="running_processes_item_description_p_p" msgid="1607384595790852782">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>のサービス"</string>
+    <string name="running_processes_item_description_s_s" msgid="5790575965282023145">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>個のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>個のサービス"</string>
+    <string name="running_processes_item_description_s_p" msgid="8019860457123222953">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>個のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>個のサービス"</string>
+    <string name="running_processes_item_description_p_s" msgid="744424668287252915">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>個のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>個のサービス"</string>
+    <string name="running_processes_item_description_p_p" msgid="1607384595790852782">"<xliff:g id="NUMPROCESS">%1$d</xliff:g>個のプロセスと<xliff:g id="NUMSERVICES">%2$d</xliff:g>個のサービス"</string>
     <string name="runningservicedetails_settings_title" msgid="6188692418986988288">"実行中のアプリケーション"</string>
     <string name="no_services" msgid="7133900764462288263">"アクティブなサービスはありません"</string>
     <string name="runningservicedetails_services_title" msgid="391168243725357375">"サービス"</string>
@@ -864,7 +864,7 @@
     <string name="input_methods_settings_title" msgid="6800066636850553887">"文字入力"</string>
     <string name="input_methods_settings_summary" msgid="7571173442946675205">"テキスト入力オプションを管理"</string>
     <string name="input_methods_settings_label_format" msgid="6002887604815693322">"<xliff:g id="IME_NAME">%1$s</xliff:g>の設定"</string>
-    <string name="onscreen_keyboard_settings_summary" msgid="5841558383556238653">"画面キーボードの設定"</string>
+    <string name="onscreen_keyboard_settings_summary" msgid="5841558383556238653">"画面キーボードを設定する"</string>
     <string name="builtin_keyboard_settings_title" msgid="5274990495405941804">"端末内蔵キーボード"</string>
     <string name="builtin_keyboard_settings_summary" msgid="7990296351888096836">"端末内蔵物理キーボードの設定"</string>
     <string name="development_settings_title" msgid="6719732334835420989">"開発"</string>
@@ -953,7 +953,7 @@
     <string name="battery_desc_radio" msgid="5479196477223185367">"セル無線通信の電池使用量"</string>
     <string name="battery_sugg_radio" msgid="8211336978326295047">"電波が届かない場所では機内モードに切り替えて電池を節約します。"</string>
     <string name="battery_desc_display" msgid="5432795282958076557">"ディスプレイとバックライトの電池使用量"</string>
-    <string name="battery_sugg_display" msgid="3370202402045141760">"画面の明るさを下げたりバックライト消灯までの時間を短くしたりします"</string>
+    <string name="battery_sugg_display" msgid="3370202402045141760">"画面の明るさを下げたり画面消灯までの時間を短くしたりします"</string>
     <string name="battery_desc_wifi" msgid="1702486494565080431">"Wi-Fiの電池使用量"</string>
     <string name="battery_sugg_wifi" msgid="7542345142282261691">"未使用時または電波が届かないときはWi-FiをOFFにします"</string>
     <string name="battery_desc_bluetooth" msgid="7535520658674621902">"Bluetoothの電池使用量"</string>
@@ -1134,14 +1134,14 @@
     <string name="encrypted_fs_alert_dialog_title" msgid="583462447886934755">"暗号化ファイルシステムの警告。"</string>
     <string name="emergency_tone_title" msgid="1055954530111587114">"緊急時の音"</string>
     <string name="emergency_tone_summary" msgid="722259232924572153">"緊急通報時の動作を設定します"</string>
-    <string name="privacy_settings" msgid="9206631214140954954">"プライバシー"</string>
+    <string name="privacy_settings" msgid="9206631214140954954">"バックアップと復元"</string>
     <string name="privacy_settings_title" msgid="1987089301293213705">"プライバシーの設定"</string>
     <string name="backup_section_title" msgid="8856083167469467588">"バックアップと復元"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"個人データ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"データのバックアップ"</string>
-    <string name="backup_data_summary" msgid="6515285107793232815">"アプリケーションデータ、Wi-Fiパスワード、その他の設定をGoogleサーバーにバックアップします。"</string>
+    <string name="backup_data_summary" msgid="6515285107793232815">"アプリケーションデータ、Wi-Fiパスワード、その他の設定をGoogleサーバーにバックアップする"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"自動復元"</string>
-    <string name="auto_restore_summary" msgid="83177150536734378">"バックアップ済みの設定やその他のデータをアプリケーションの再インストール時に復元します"</string>
+    <string name="auto_restore_summary" msgid="83177150536734378">"バックアップ済みの設定やその他のデータをアプリケーションの再インストール時に復元する"</string>
     <string name="backup_erase_dialog_title" msgid="3438255037256586237">"バックアップ"</string>
     <string name="backup_erase_dialog_message" msgid="7766283133557587608">"Wi-Fiパスワード、ブックマーク、その他の設定とアプリケーションデータのバックアップを停止し、Googleサーバー上のすべてのコピーを消去してよろしいですか？"</string>
     <string name="device_admin_settings_title" msgid="1335557832906433309">"デバイス管理の設定"</string>
