--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -1134,7 +1134,7 @@
     <string name="encrypted_fs_alert_dialog_title" msgid="583462447886934755">"Waarschuwing voor gecodeerde bestandssystemen."</string>
     <string name="emergency_tone_title" msgid="1055954530111587114">"Toon voor noodoproep"</string>
     <string name="emergency_tone_summary" msgid="722259232924572153">"Gedrag bij noodoproepen instellen"</string>
-    <string name="privacy_settings" msgid="9206631214140954954">"Privacy"</string>
+    <string name="privacy_settings" msgid="9206631214140954954">"Back-up &amp; herstellen"</string>
     <string name="privacy_settings_title" msgid="1987089301293213705">"Privacyinstellingen"</string>
     <string name="backup_section_title" msgid="8856083167469467588">"Back-up maken en terugzetten"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Persoonlijke gegevens"</string>
