--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -625,7 +625,7 @@
     <string name="media_format_gesture_explanation" product="nosdcard" msgid="1379736318750958338">"Aby potwierdzić zamiar wyczyszczenia nośnika USB, musisz narysować wzór odblokowania."</string>
     <string name="media_format_gesture_explanation" product="default" msgid="1681213416497647321">"Aby potwierdzić zamiar wyczyszczenia karty SD, musisz narysować wzór odblokowania."</string>
     <string name="call_settings_title" msgid="5188713413939232801">"Ustawienia połączeń"</string>
-    <string name="call_settings_summary" msgid="7291195704801002886">"Poczta głosowa, przekierowania połączeń, poł. oczekujące, ID rozmówcy"</string>
+    <string name="call_settings_summary" msgid="7291195704801002886">"Poczta głosowa, przekazywanie połączeń, poł. oczekujące, ID rozmówcy"</string>
     <string name="tether_settings_title_usb" msgid="4315031513434087777">"Tethering"</string>
     <string name="tether_settings_title_wifi" msgid="3277144155960302049">"Przenośny punkt dostępu"</string>
     <string name="tether_settings_title_both" msgid="2734066355556891504">"Tethering i przenośny punkt dostępu"</string>
