--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -474,7 +474,7 @@
     <string name="accelerometer_summary_off" msgid="5485489363715740761">"旋轉手機時自動改變顯示方向"</string>
     <string name="brightness" msgid="2354961343555249270">"亮度"</string>
     <string name="brightness_summary" msgid="838917350127550703">"調整螢幕亮度"</string>
-    <string name="screen_timeout" msgid="4882669461447531301">"螢幕逾時"</string>
+    <string name="screen_timeout" msgid="4882669461447531301">"螢幕自動關閉"</string>
     <string name="screen_timeout_summary" msgid="2905757633140605334">"調整螢幕自動關閉前的延遲時間"</string>
     <string name="automatic_brightness" msgid="5014143533884135461">"自動調整亮度"</string>
     <string name="sim_lock_settings" msgid="3392331196873564292">"SIM 卡鎖定設定"</string>
@@ -953,7 +953,7 @@
     <string name="battery_desc_radio" msgid="5479196477223185367">"手機無線電耗電量"</string>
     <string name="battery_sugg_radio" msgid="8211336978326295047">"切換到飛行模式，以便裝置不在服務涵蓋範圍時能節省電力"</string>
     <string name="battery_desc_display" msgid="5432795282958076557">"顯示與背光啟動時的耗電量"</string>
-    <string name="battery_sugg_display" msgid="3370202402045141760">"降低螢幕亮度和/或螢幕逾時時間"</string>
+    <string name="battery_sugg_display" msgid="3370202402045141760">"降低螢幕亮度和/或螢幕自動關閉時間"</string>
     <string name="battery_desc_wifi" msgid="1702486494565080431">"Wi-Fi 耗電量"</string>
     <string name="battery_sugg_wifi" msgid="7542345142282261691">"未使用或無法使用 Wi-Fi 時即關閉 Wi-Fi"</string>
     <string name="battery_desc_bluetooth" msgid="7535520658674621902">"藍牙耗電量"</string>
